add kitchen home pose and add gravity compensation for TRI grippers and realsense

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,9 @@ target_link_libraries(libfranka_joint_goal_motion_generator franka_interactive_c
 add_executable(libfranka_joint_goal_motion_generator_rss src/libfranka_joint_goal_motion_generator_rss.cpp)
 target_link_libraries(libfranka_joint_goal_motion_generator_rss franka_interactive_controllers ${catkin_LIBRARIES})
 
+add_executable(libfranka_joint_goal_motion_generator_kitchen src/libfranka_joint_goal_motion_generator_kitchen.cpp)
+target_link_libraries(libfranka_joint_goal_motion_generator_kitchen franka_interactive_controllers ${catkin_LIBRARIES})
+
 add_executable(libfranka_joint_goal_motion_generator_dressing src/libfranka_joint_goal_motion_generator_dressing.cpp)
 target_link_libraries(libfranka_joint_goal_motion_generator_dressing franka_interactive_controllers ${catkin_LIBRARIES})
 
