--- a/config/impedance_control_additional_params.yaml
+++ b/config/impedance_control_additional_params.yaml
@@ -27,7 +27,7 @@
 #     x: -0.25930899355313225
 #     y: -0.5592998823797354
 #     z: 0.3531043590668558
-external_tool_compensation: [1.131, -1.01, -3.092, -0.171, -0.142, 0.252]
+external_tool_compensation: [1.131, -1.01, -2.092, -0.171, -0.142, 0.252]
 
 
 
@@ -59,4 +59,5 @@ cartesian_stiffness_target: [300, 300, 500, 50, 70, 50]
 # RSS: teach:
 # nullspace_stiffness_target: [10, 5, 0.1, 0.1, 0.1, 0.000001, 0.1]
 # RSS: execute
-nullspace_stiffness_target: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+# nullspace_stiffness_target: [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+nullspace_stiffness_target: [0.00001, 0.05, 50, 0.05, 5, 0.05, 0.00001]
