--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,9 @@ target_link_libraries(libfranka_joint_goal_motion_generator_rss franka_interacti
 add_executable(libfranka_joint_goal_motion_generator_kitchen src/libfranka_joint_goal_motion_generator_kitchen.cpp)
 target_link_libraries(libfranka_joint_goal_motion_generator_kitchen franka_interactive_controllers ${catkin_LIBRARIES})
 
+add_executable(libfranka_joint_goal_motion_generator_vla src/libfranka_joint_goal_motion_generator_vla.cpp)
+target_link_libraries(libfranka_joint_goal_motion_generator_vla franka_interactive_controllers ${catkin_LIBRARIES})
+
 add_executable(libfranka_joint_goal_motion_generator_dressing src/libfranka_joint_goal_motion_generator_dressing.cpp)
 target_link_libraries(libfranka_joint_goal_motion_generator_dressing franka_interactive_controllers ${catkin_LIBRARIES})
 
